# leti-esoft-24-25-A2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ConsoleApp/: CMakeLists.txt
ConsoleApp/headers/views/: AuthMenuView.h  BaseAuthView.h  BaseView.h  CategoriesMenuView.h  CreateCategoryView.h  DeleteCategoryView.h  DisplayListedPropertiesView.h  ListCategoriesView.h  MenuView.h  NoAuthMenuView.h  UpdateCategoryView.h  Utils.h  WelcomeView.h
ConsoleApp/sources/views/: AuthMenuView.cpp  BaseAuthView.cpp  BaseView.cpp  CategoriesMenuView.cpp  CreateCategoryView.cpp  DeleteCategoryView.cpp  DisplayListedPropertiesView.cpp  ListCategoriesView.cpp  MenuView.cpp  NoAuthMenuView.cpp  PublishAdView.cpp  UpdateCategoryView.cpp  Utils.cpp  WelcomeView.cpp
Core/: CMakeLists.txt
Core/Headers/Controllers/restapi/: AgentController.h  CategoryController.h  HttpResult.h  HttpStatus.h  PropertyController.h  StoreController.h
RestAPI/: CMakeLists.txt  RestAPI.cpp
RestAPI/headers/: AgentRouter.h  CategoryRouter.h  HttpResult.h  PropertyRouter.h  RouterConfig.h  ServerStatusRouter.h  StoreRouter.h  TasksServer.h
RestAPI/postmanTests/: DemoTasks-LectureClass.postman_collection.json  LETI-ESOFT-DemoTasks.postman_collection.json
RestAPI/sources/: AgentRouter.cpp  CategoryRouter.cpp  PropertyRouter.cpp  RouterConfig.cpp  ServerStatusRouter.cpp  StoreRouter.cpp  TasksServer.cpp
Sources/: Advertisement.cpp  BookingService.cpp  BookingView.cpp  DisplayListedPropertiesService.cpp  Lease.cpp  Listing.cpp  Property.cpp  PropertyContainer.cpp  PublishAdController.cpp  PublishAdView.cpp  Sale.cpp  VisitRequest.cpp
docs/: README.md  TeamMembersAndTasks.md
docs/(templates)/: TeamMembersAndTasks.md
docs/(templates)/Global_Artifacts/: DM.md  FURPS.md  UCD.md  UCD.puml
docs/(templates)/US00/: US00.md
docs/Sprint1/: README.md
docs/Sprint1/Global_Artifacts/: DM.md  DM.puml  FURPS.md  Glossary.md  UCD.md  UCD.puml
docs/Sprint2/: README.md
docs/Sprint2/Global_Artifacts/: DM.md  DM.puml  FURPS.md  Glossary.md  UCD.md  UCD.puml
docs/Sprint2/US10/: US10-CD.puml  US10-SD.puml  US10.md
docs/Sprint2/US11/: US11-CD.puml  US11-MD.puml  US11-SD.puml  US11-SSD.puml  US11.md
docs/Sprint2/US21/: US21-CD.puml  US21-MD.puml  US21-SD.puml  US21-SSD.puml  US21.md
docs/Sprint2/US51/: US51-CD.puml  US51-MD.puml  US51.md
docs/Sprint3/: README.md
docs/Sprint3/Global_Artifacts/: DM.puml  Glossary.md  UCD.md  UCD.puml
docs/Sprint3/US20/: US20-CD.puml  US20-MD.puml  US20-SD.puml  US20-SSD.puml  US20.md
docs/Sprint3/US30/: US30-CD.puml  US30-MD.puml  US30-SD.puml  US30-SSD.puml  US30.md
docs/Sprint3/US31/: US31-CD.puml  US31-MD.puml  US31-SD.puml  US31-SSD.puml  US31.md
docs/Sprint3/US40/: US40-CD.puml  US40-MD.puml  US40-SD.puml  US40-SSD.puml  US40.md
docs/Sprint4/: README.md
docs/Sprint4/AppInit/: AppInit.md  AppInit.puml
docs/Sprint4/Global_Artifacts/: DM.puml  Glossary.md  UCD.md  UCD.puml
docs/Sprint4/HTTPFlow/: GenericSD.puml  HTTPFlow.md
docs/Sprint4/US10/: US10-CD-RestAPI.puml  US10-CD.puml  US10-MD.puml  US10-SD-RestAPI-Simplified.puml  US10-SD-RestAPI.puml  US10-SSD.puml
docs/Sprint4/US11/: US11-CD-RestAPI.puml  US11-CD.puml  US11-MD.puml  US11-SD-RestAPI-Simplified.puml  US11-SD-RestAPI.puml  US11.md
docs/Sprint4/US20/: US20-CD-RestAPI.puml  US20-CD.puml  US20-MD.puml  US20-SD-RestAPI-Simplified.puml  US20-SD-RestAPI.puml  US20-SD.puml  US20.md
docs/Sprint4/US32/: US32-CD.puml  US32-MD.puml  US32-SD.puml  US32-SSD.puml  US32.md
docs/Sprint4/US41/: US41-CD.puml  US41-MD.puml  US41-SD.puml  US41-SSD.puml  US41.md
docs/Sprint4/US42/: US42-CD.puml  US42-MD.puml  US42-SD.puml  US42-SSD.puml  US42.md
docs/Sprint4/US50/: US50-CD.puml  US50-MD.puml  US50-SD.puml  US50-SSD.puml  US50.md
docs/Sprint4/US51/: US51-CD-RestAPI.puml  US51-CD.puml  US51-SD-RestAPI-Simplified.puml  US51-SD-RestAPI.puml  US51-SD.puml  US51-SSD.puml
headers/: Advertisement.h  BookingController.h  BookingService.h  BookingView.h  Client.h  DisplayListedPropertiesController.h  DisplayListedPropertiesService.h  DisplayListedPropertiesView.h  Lease.h  Listing.h  ListingRepository.h  Property.h  PropertyContainer.h  PublishAdController.h  PublishAdView.h  RealEstateAgent.h  Sale.h  Visit.h  VisitRequest.h
headers/models/: Property.h  RealEstateAgent.h
sources/: Client.cpp  DisplayListedPropertiesController.cpp  DisplayListedPropertiesView.cpp  Listing.cpp  ListingRepository.cpp  Property.cpp  PropertyContainer.cpp  PublishAdController.cpp  RealEstateAgent.cpp  VisitRequest.cpp
(+72 files in other folders)
