cmake_minimum_required(VERSION 3.20)
project(leti-esoft-24-25-A2)

add_executable(leti-esoft-24-25-A2 main.cpp
        headers/
        headers/models/
        sources/
        RestAPI/
        RestAPI/headers/
        RestAPI/postmanTests/
        RestAPI/sources/
        RestAPI/thirdparty/
        ConsoleApp/
        ConsoleApp/headers/
        ConsoleApp/sources/
        Core/
        Core/Headers/
        Core/Sources/
        Core/thirdparty/
        CoreTests/
        CoreTests/domain/
        CoreTests/lib/



)
